<resources>
    <string name="app_name">Massttr</string>
    <string name="maps_api_key">AIzaSyBJrJjwOvvii1IUhkjz3XaYPpLic_OU9Xo</string>
    <string name="channel_id_chat">Chat</string>
    <string name="no_internet">No Internet Connected</string>
    <string name="msg_no_internet">No Internet connection found. Check your connection try again.</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="time_out">Response time out</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
    <string name="payment">Payment</string>
    <string name="enter_name_of_location">Enter name of location</string>
    <string name="next">Next</string>
    <string name="task_title">Task title</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam beatae deleniti dolorum exercitationem laboriosam libero magni, maiores minima mollitia nisi numquam porro provident quam, quasi quo rem. Amet aut consequuntur deleniti et excepturi hic</string>
    <string-array name="category_option">
        <item><font color="tex_grayTwo">Select type of service</font></item>
        <item>Plumber</item>
    </string-array>
    <string name="faq">FAQ</string>
    <string name="selected_Date">%d-%d-%d</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_condition">Terms Condition</string>
    <string name="privacy_policy_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </string>
    <string name="request_otp">Request Code</string>
    <string name="please_enter_the_4_digit">Please enter the 4-digit code send to you at </string>
    <string name="create_profile">Create Profile</string>
    <string name="enter_first_name_here">Enter First Name Here</string>
    <string name="enter_last_name_here">Enter Last Name Here</string>
    <string name="enter_dob">Enter DOB</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="zip_code">Zip Code</string>
    <string name="address">Address</string>
    <string name="done">Done</string>
    <string name="select_language">Select Language</string>
    <string name="please_select_the_language">Please select the language you can Understand better.</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="continuee">Continue</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="i_am_so_happy_to_see_you">We\'re so happy to see you, you can continue to login for manage your work</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register">Register</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="change">Change</string>
    <string name="verify">Verify</string>
    <string name="if_you_didn_t_receive_a_code">If you didn\'t receive a code!</string>
    <string name="resend">Resend</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="create_a_account_so_you">Create a account so you can manage your personal work</string>
    <string name="john_smith">John Smith</string>
    <string name="_9889854">9889854</string>
    <string name="don_t_have_an">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="mastters">ماستتر</string>
    <string name="thank_you">Thank You!</string>
    <string name="your_profile_has_been_successfully_created">Your profile has been successfully created.</string>
    <string name="verified">Verified!</string>
    <string name="your_mobile_number_has_been">Your mobile number has been\n successfully verified</string>
    <string name="please_select_date">Please select date</string>
    <string name="please_select_time">Please select time</string>
    <string name="please_enter_number">Please Enter Mobile Number</string>
    <string name="please_enter_name">Please Enter Name</string>
    <string name="please_enter_OTP">Please enter verification code</string>
    <string name="please_enter_first_name">Please enter full name</string>
    <string name="please_enter_last_name">Please enter last name</string>
    <string name="please_enter_email">Please enter Email Id</string>
    <string name="please_enter_dob">Please choose Date of Birth</string>
    <string name="please_enter_zip">Please enter Zip code</string>
    <string name="please_enter_address">Please enter Address</string>
    <string name="please_select_category">Please select Category first</string>
    <string name="success_">Success</string>
    <string name="enter_mobile_number">Enter Phone Number</string>
    <string name="enter_valid_mobile_number">Enter Valid Mobile Number</string>
    <string name="otp_resend">OTP resend successfully</string>
    <string name="completed">Completed</string>
    <string name="pending">PENDING</string>
    <string name="description">Description</string>
    <string name="elaborate_type_of_service">Elaborate type of service</string>
    <string name="required_skills">Required Skills</string>
    <string name="previous">Previous</string>
    <string name="successfully_verified">successfully verified</string>
    <string name="do_you_want_to_pay_a_full_task_price">Do you want to pay a full task price</string>
    <string name="yes">Yes</string>
    <string name="no_i_want_to_pay_hourly_price">No, I want to pay hourly price</string>
    <string name="hourly_rate">Hourly Rate</string>
    <string name="hours">Hours</string>
    <string name="full_task_price">Full Task Price</string>
    <string name="timeline">TimeLine</string>
    <string name="when_do_you_want_the_task_done">When do you want the task done?</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="tool_request">Tool Request</string>
    <string name="should_the_fixer_bring_any_tools">Should the fixer bring any tools?</string>
    <string name="tool_request_optional">Tool request (Optional)</string>
    <string name="enter_required_equipment">Enter Required Equipment</string>
    <string name="upload_task_photos">Upload task Photos</string>
    <string name="photos_of_the_task">Photos of the task</string>
    <string name="take_a_photos">Take a photos</string>
    <string name="photos_of_task">Photos of task</string>
    <string name="total_price">Total Price</string>
    <string name="date_time">Date - Time</string>
    <string name="required_equipment">Required Equipment</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="you_have_placed_the_task">You have placed the task request successfully. You can able to cancel the task request before 24 hours of starting the task.</string>
    <string name="confirm">Confirm</string>
    <string name="successfully">Successfully</string>
    <string name="contact_us">Contact us</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="help_center">Help Center</string>
    <string name="logout">Logout</string>
    <string name="logout_s">Log out?</string>
    <string name="delete_your_account">Delete your account</string>
    <string name="delete_account">Delete account</string>
    <string name="are_you_sure_want_to">Are you sure want to</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="yes_delete">Yes, Delete</string>
    <string name="all">All</string>
    <string name="fixers">Fixer</string>
    <string name="_4_5km">4.5km</string>
    <string name="_28_completed_tasks">Completed tasks</string>
    <string name="chat">Chat</string>
    <string name="filter">Filter</string>
    <string name="rating">Rating</string>
    <string name="completed_jobs">Completed jobs</string>
    <string name="education">Education</string>
    <string name="schooling">Schooling</string>
    <string name="bachelor">Bachelor</string>
    <string name="masters">Masters</string>
    <string name="view_all">View all</string>
    <string name="education_amp_experience"><![CDATA[Education & Experience]]></string>
    <string name="see_more">See more</string>
    <string name="book_fixer">Book Fixer</string>
    <string name="online">\u25CF Online</string>
    <string name="type">Type…</string>
    <string name="change_price">Change Price</string>
    <string name="submit">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="order_history">Order History</string>
    <string name="view_receipt">View Receipt</string>
    <string name="download">Download</string>
    <string name="your_receipt_has_been_successfully_downloaded">Your receipt has been successfully Downloaded.</string>
    <string name="task_details">Task Details</string>
    <string name="cancel_task">Cancel Task</string>
    <string name="task_price">Task Price</string>
    <string name="task_complete">Task Complete</string>
    <string name="rate_your_experience">Rate Your Experience</string>
    <string name="are_you_satisfied_with_the_service">Are You satisfied with the Service?</string>
    <string name="the_job_is_complete_with_reviews_and_photos">The job is complete with reviews and photos</string>
    <string name="go_to_order_history">Go to Order History</string>
    <string name="go_to_home">Go to home</string>
    <string name="yes_cancel">Yes, Cancel</string>
    <string name="task_has_been_n_successfully_completed">Task has been\nsuccessfully completed</string>
    <string name="_09_30_am">09:30 AM</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="notification">Notifications</string>
    <string name="_08_sep_2021_03_30_pm">08 Sep 2021, </string>
    <string name="view_fixer">View Fixer</string>
    <string name="edit_price">Edit Price</string>
    <string name="_20">$20</string>
    <string name="_11_11am">11:11AM</string>
    <string name="_02">02</string>
    <string name="fixer_name_has_accepted_the_job">Fixer Name has accepted the job</string>
    <string name="my_profile">My Profile</string>
    <string name="your_are_delete_account">Are you sure you want to delete this account?</string>
    <string name="lastname">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_date">Enter Date</string>
    <string name="_28_completed">28 Completed</string>
    <string name="tasks">tasks</string>
    <string name="complete_task">Complete Task</string>
    <string name="price">Price</string>
    <string name="fixer_name">Fixer Name</string>
    <string name="typing">typing…</string>
    <string name="task_request">Task request</string>
    <string name="_0">0</string>
    <string name="_00iqd">0IQD</string>
    <string name="confirm_details">Confirm Details</string>
    <string name="inbox">Inbox</string>
    <string name="give_a_review">Give a review</string>
    <string name="order_accepted">Order Accepted</string>
    <string name="fixer_profile">Fixer Profile</string>
    <string name="enter_task_title">Please enter task title</string>
    <string name="enter_task_disc">Please describe your task in brief</string>
    <string name="enter_required_skill">Please enter Required Skills</string>
</resources>