<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.language.login.register.RegistrationActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_16sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_16sdp" />

        <ImageView
            android:id="@+id/ivRegisterIcon"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:contentDescription="@null"
            android:src="@drawable/ic_black_logo"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWelcome"
            style="@style/styleTextBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/create_a_new_account"
            android:textColor="@color/yellow"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@id/ivRegisterIcon" />

        <TextView
            android:id="@+id/tvRegisterCreate"
            style="@style/styleTextSemiMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/create_a_account_so_you"
            android:textColor="@color/colorBlackHelp"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

        <LinearLayout
            android:id="@+id/lLFullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_35sdp"
            android:background="@drawable/edit_box_bg"
            android:padding="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@id/tvRegisterCreate">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_8sdp"
                android:contentDescription="@null"
                android:src="@drawable/ic_user" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="#b5b7b9" />

            <EditText
                android:id="@+id/etFullName"
                style="@style/styleTextSemiMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@null"
                android:hint="@string/enter_first_name_here"
                android:inputType="textPersonName"
                android:padding="@dimen/_10sdp"
                android:textAlignment="viewStart"
                android:textColor="@color/colorBlackHelp"
                android:textColorHint="@color/tex_grayTwo"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lLPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edit_box_bg"
            android:padding="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart"
            app:layout_constraintTop_toBottomOf="@id/lLFullName">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_8sdp"
                android:src="@drawable/ic_iraq_flag" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="#b5b7b9" />

            <EditText
                android:id="@+id/etMobileNumber"
                style="@style/styleTextSemiMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@null"
                android:hint="@string/enter_mobile_number"
                android:inputType="number"
                android:padding="@dimen/_10sdp"
                android:maxLength="11"
                android:textAlignment="viewStart"
                android:textColor="@color/colorBlackHelp"
                android:textColorHint="@color/tex_grayTwo"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnRegistration"
            style="@style/styleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/request_otp"
            android:layout_marginBottom="@dimen/_40sdp"
            app:layout_constraintBottom_toTopOf="@id/llLogin"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart" />

        <LinearLayout
            android:id="@+id/llLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart">

            <TextView
                android:id="@+id/tvRegisterAccount"
                style="@style/styleTextSemiMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an"
                android:textColor="@color/tex_grayTwo"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvLogin"
                style="@style/styleTextSemiMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:text="@string/login"
                android:textColor="@color/Black_Color"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
